[package]
name = "fire-and-ice"
version = "0.1.0"
authors = ["Alex Walton <alex.w.walton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }